# marksmanship_training_tkinter

./: main.py  pyproject.toml  tempCodeRunnerFile.py  test.py
