[tool.poetry]
name = "marksmanship-training-tkinter"
version = "0.1.0"
description = ""
authors = ["Mikhail Panin <mokybrow@gmail.com>"]
readme = "README.md"
packages = [{include = "marksmanship_training_tkinter"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
